# AutoTyper

./: .gitignore  AutoTyper.h  AutoTyper_linux.cpp  AutoTyper_win.cpp  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_en.md  autotype.sh  check_modifier.cpp  config.ini  detect.py  note.md  target.cpp
cmake/: smart_copy.cmake
other/: AutoTyper_linux.cpp  AutoTyper_win.cpp  autotype.sh  test_window.cpp
public/: config.ini  target.cpp
src/: AutoTyper.cpp  AutoTyper.h  INIParser.cpp  INIParser.h  config.cpp  config.h  main.cpp  utils.h
